--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
     </div>
     <div class="note-container">
       <div class="note">
-        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nam, modi.</p>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nam, modi. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Expedita molestias, amet recusandae minima architecto eveniet, hic molestiae repellat doloribus soluta corrupti ex quaerat vel dignissimos.</p>
+        <button class="delete-btn">Delete</button>
       </div>
     </div>
   </main>
